namespaces/n8n/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"n8n:n8n","ingressName":"n8n:n8n","hostname":"n8n.35.241.255.137.nip.io","path":"/","allNodes":false}]'
  name: n8n
  namespace: n8n
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-04-17T06:19:59Z'
      labels:
        app: n8n
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - aiot-worker-02
            weight: 50
      containers:
      - env:
        - name: N8N_HOST
          value: n8n.35.241.255.137.nip.io
        - name: WEBHOOK_URL
          value: https://n8n.35.241.255.137.nip.io/
        - name: N8N_PORT
          value: '5678'
        - name: N8N_PROTOCOL
          value: https
        - name: N8N_SECURE_COOKIE
          value: 'false'
        - name: N8N_EDITOR_BASE_URL
          value: https://n8n.35.241.255.137.nip.io
        - name: N8N_BASIC_AUTH_ACTIVE
          value: 'false'
        - name: N8N_USER_MANAGEMENT_DISABLED
          value: 'true'
        - name: N8N_DIAGNOSTICS_ENABLED
          value: 'false'
        - name: N8N_PERSONALIZATION_ENABLED
          value: 'false'
        - name: GENERIC_TIMEZONE
          value: Europe/Bratislava
        - name: DB_TYPE
          value: postgresdb
        - name: DB_POSTGRESDB_HOST
          value: postgres.aiot.svc
        - name: DB_POSTGRESDB_PORT
          value: '5432'
        - name: DB_POSTGRESDB_DATABASE
          value: n8n
        - name: DB_POSTGRESDB_USER
          value: aiot
        - name: DB_POSTGRESDB_PASSWORD
          value: aiot123
        - name: DB_POSTGRESDB_SSL_REJECT_UNAUTHORIZED
          value: 'false'
        image: n8nio/n8n:latest
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - stat
            - /home/node/.n8n
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: n8n
        ports:
        - containerPort: 5678
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/node/.n8n
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: n8n-data-lp
