namespaces/n8n/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  clusterIP: 10.104.232.25
  clusterIPs:
  - 10.104.232.25
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: n8n
  sessionAffinity: None
  type: ClusterIP
